--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,8 @@ jobs:
       - image: docker:git
     steps:
       - checkout
+      - setup_remote_docker:
+          version: 18.09.3
       - docker_prepare
       - run: docker login --username $DOCKER_HUB_USERNAME --password $DOCKER_HUB_PASSWORD
       - docker_build:
@@ -15,6 +17,8 @@ jobs:
       - image: docker:git
     steps:
       - checkout
+      - setup_remote_docker:
+          version: 18.09.3
       - docker_prepare
       - run: docker login --username $DOCKER_HUB_USERNAME --password $DOCKER_HUB_PASSWORD
       - docker_build:
@@ -46,7 +50,6 @@ commands:
       - run: mkdir -vp ~/.docker/cli-plugins/ ~/dockercache
       - run: curl --silent -L "https://github.com/docker/buildx/releases/download/<< parameters.buildx_version >>/buildx-<< parameters.buildx_version >>.linux-amd64" > ~/.docker/cli-plugins/docker-buildx
       - run: chmod a+x ~/.docker/cli-plugins/docker-buildx
-      - run: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
       - run: docker buildx create
 
   docker_build:
