--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,7 +64,7 @@ commands:
         default: true
       platforms:
         type: string
-        default: linux/armhf,linux/arm64/v8,linux/amd64
+        default: linux/armhf,linux/amd64
       context:
         type: string
         default: .
