--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -24,6 +24,9 @@ FROM docker.io/python:${PYTHON_VERSION}-slim as builder
 RUN apt-get update && apt-get install -y \
     build-essential \
     libpq-dev \
+    libssl-dev \
+    libffi-dev \
+    python-dev \
  && rm -rf /var/lib/apt/lists/*
 
 # Build dependencies that are not available as wheels, to speed up rebuilds
