--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,7 @@ commands:
         default: true
       platforms:
         type: string
-        default: linux/amd64
+        default: linux/amd64,linux/arm64,linux/arm/v7
       context:
         type: string
         default: .
