--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -29,6 +29,8 @@ RUN apt-get update && apt-get install -y \
     python3-dev \
     libxml++2.6-dev \
     libxslt1-dev \
+    python3-nacl \
+    python3-cryptography \
  && rm -rf /var/lib/apt/lists/*
 
 # Build dependencies that are not available as wheels, to speed up rebuilds
