--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -36,7 +36,7 @@ RUN apt-get update && apt-get install -y \
 
 # Build dependencies that are not available as wheels, to speed up rebuilds
 RUN pip3 install --prefix="/install" --no-warn-script-location \
-        --extra-index-url=https://www.piwheels.org/simple \
+        --extra-index-url=https://gergely.imreh.net/wheels/ \
         frozendict \
         jaeger-client \
         opentracing \
