--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       - docker_prepare
       - run: docker login --username $DOCKER_HUB_USERNAME --password $DOCKER_HUB_PASSWORD
       - docker_build:
-          tag: -t maquis196/synapse:${CIRCLE_TAG} maquis196/synapse:${CIRCLE_TAG}-py3
+          tag: -t maquis196/synapse:${CIRCLE_TAG} -t maquis196/synapse:${CIRCLE_TAG}-py3
           platforms: linux/amd64
       - docker_build:
           tag: -t maquis196/synapse:${CIRCLE_TAG}
@@ -24,7 +24,7 @@ jobs:
       - docker_prepare
       - run: docker login --username $DOCKER_HUB_USERNAME --password $DOCKER_HUB_PASSWORD
       - docker_build:
-          tag: -t maquis196/synapse:latest -t maquis196/synapse:${CIRCLE_TAG}-py3
+          tag: -t maquis196/synapse:latest -t maquis196/synapse:latest-py3
           platforms: linux/amd64
       - docker_build:
           tag: -t maquis196/synapse:latest
