--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,10 +9,10 @@ jobs:
       - docker_prepare
       - run: docker login --username $DOCKER_HUB_USERNAME --password $DOCKER_HUB_PASSWORD
       - docker_build:
-          tag: -t matrixdotorg/synapse:${CIRCLE_TAG} -t maquis196/synapse:${CIRCLE_TAG}-py3
+          tag: -t maquis196/synapse:${CIRCLE_TAG} -t maquis196/synapse:${CIRCLE_TAG}-py3
           platforms: linux/amd64
       - docker_build:
-          tag: -t matrixdotorg/synapse:${CIRCLE_TAG} -t maquis196/synapse:${CIRCLE_TAG}-py3
+          tag: -t maquis196/synapse:${CIRCLE_TAG} -t maquis196/synapse:${CIRCLE_TAG}-py3
           platforms: linux/amd64,linux/arm64,linux/arm64/v7,linux/arm64/v8
 
   dockerhubuploadlatest:
@@ -24,10 +24,10 @@ jobs:
       - docker_prepare
       - run: docker login --username $DOCKER_HUB_USERNAME --password $DOCKER_HUB_PASSWORD
       - docker_build:
-          tag: -t matrixdotorg/synapse:latest
+          tag: -t maquis196/synapse:latest
           platforms: linux/amd64
       - docker_build:
-          tag: -t matrixdotorg/synapse:latest
+          tag: -t maquis196/synapse:latest
           platforms: linux/amd64,linux/arm64,linux/arm64/v7,linux/arm64/v8
 
 workflows:
