--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
           platforms: linux/amd64
       - docker_build:
           tag: -t maquis196/synapse:${CIRCLE_TAG} -t maquis196/synapse:${CIRCLE_TAG}-py3
-          platforms: linux/amd64,linux/arm64,linux/arm64/v8
+          platforms: linux/amd64,linux/arm64/v8,linux/arm/v7
 
   dockerhubuploadlatest:
     docker:
@@ -28,7 +28,7 @@ jobs:
           platforms: linux/amd64
       - docker_build:
           tag: -t maquis196/synapse:latest
-          platforms: linux/amd64,linux/arm64,linux/arm64/v8
+          platforms: linux/amd64,linux/arm64/v8,linux/arm/v7
 
 workflows:
   build:
